toolbox overlap fix

--- a/src/css/sass/blocks/_header.scss
+++ b/src/css/sass/blocks/_header.scss
@@ -35,7 +35,7 @@ header {
     background: rgb(48, 6, 6);
 
     position: absolute;
-    bottom: 10vh;
+    bottom: 85px;
     left: -100%;
 
     padding: 20px;
